# advent-of-code-2025

./: LICENSE  README.md  aoc2025.cabal
app/: day-01.hs  day-02.hs  day-03.hs  day-04.hs
src/: day-01.hs
