cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cjwallace
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day-01
    import:           warnings
    main-is:          day-01.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.21.0.0,
    default-language: Haskell2010

executable day-02
    import:           warnings
    main-is:          day-02.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.21.0.0,
        text,
        split,
    default-language: Haskell2010

executable day-03
    import:           warnings
    main-is:          day-03.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.21.0.0,
    default-language: Haskell2010

executable day-04
    import:           warnings
    main-is:          day-04.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.21.0.0,
        lens
    default-language: Haskell2010
